ADA footer logo visiblility issue and offers slider height issue fix.
Ref:https://traveltripper.lightning.force.com/lightning/r/Case/5001Q00000uolTYQAY/view

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -223,6 +223,7 @@ footer {
       }
     }
     &__powered {
+      position: relative;
       text-align: center;
       @include media-breakpoint-down(sm) {
         img {
